AMP-21121 Funding alignment issue for Transaction Date field
git-svn-id: file:///svn/branches/AMP_2_11_RELEASE@28801 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
@@ -621,3 +621,14 @@ tr.wicketFundingRowItem:nth-child(odd) {background: #FFFFFF}
 .inputx{
     min-height: 26px;
 }
+
+.date-position {
+	float:left;
+	margin-top:-2px;
+}
+
+@-moz-document url-prefix() {
+    .date-position {
+        margin-top: 0px;
+    }
+}
